--- a/tex/preambel.tex
+++ b/tex/preambel.tex
@@ -233,3 +233,14 @@
 \usepackage{nicefrac}
 
 \usepackage{dirtree}
+
+\lstset{
+    aboveskip=1.5em,
+    frame=tb, % draw a frame at the top and bottom of the code block
+    tabsize=4, % tab space width
+    showstringspaces=false, % don't mark spaces in strings
+    numbers=left, % display line numbers on the left
+    commentstyle=\color{green}, % comment color
+    keywordstyle=\color{blue}, % keyword color
+    stringstyle=\color{red} % string color
+}
