--- a/tex/kapitel/kapitel_2_grundlagen.tex
+++ b/tex/kapitel/kapitel_2_grundlagen.tex
@@ -1,4 +1,5 @@
 \chapter{Grundlagen}
+\label{kap2}
 
 \section{Aufbau des Laufroboters}
 
@@ -6,7 +7,20 @@
 
 \subsection{Koordinatensysteme}
 \subsection{Direkte Kinematik}
+
+- Mit gegebener Stellung der Gelenke Position und Orientierung des Endeffektes zu berechnen
+- Transformationsmatrix, die dann aufgelöst wird und berechnet werden kann
+
+fellmann zitieren
+
 \subsection{Inverse Kinematik}
+
+- Durch Position und Orientierung des Endeffektes mögliche Stellung der Gelenke zu berechnen (meist mehrere Lösungen)
+- analytische Berechnung
+- numerische Berechnung: lineare Annäherung durch Jacobi-Matrix
+
+fellmann zitieren
+
 \subsection{Laufplanung}
 
 statische Laufalgorithmen, reaktive, planende Laufalgorithmen like RandomSampling
