--- a/tex/kapitel/kapitel_4_implementierung.tex
+++ b/tex/kapitel/kapitel_4_implementierung.tex
@@ -1,10 +1,11 @@
 \chapter{Portierung des Laufplaners nach ROS und Gazebo}
+\label{kap4}
 
 Dieses Kapitel geht auf die Einzelheiten und die Abläufe der Portierung des Laufplaners nach \ac{ROS} und Gazebo ein. Zunächst werden die bestehenden Laufplaner analysiert. Dann wird ein eigenes \ac{ROS}-Paket entworfen, welches die Basis für den neuen Laufplaner darstellt. Das Kapitel stellt alle nötigen Schritte dar, um die Simulation aufzusetzen und den Roboter dazu zu bringen, Fußbewegungen auszuführen.
 
 \section{Analyse bestehender Laufplaner}
 
-Herms, Ruffler + ---> verlinken: Die Darstellung geschieht mit Hilfe der 3D- Bibliothek OpenInventor [33]
+Herms, Ruffler + ---> verlinken: Die Darstellung geschieht mit Hilfe der 3D- Bibliothek OpenInventor \autocite{inventor}
 
 \section{Vorgehensweise und Aufbau des Pakets}
 
