--- a/tex/kapitel/kapitel_2_grundlagen.tex
+++ b/tex/kapitel/kapitel_2_grundlagen.tex
@@ -13,6 +13,8 @@
 
 fellmann zitieren
 
+\autocite{fellmann2007}
+
 \subsection{Inverse Kinematik}
 
 - Durch Position und Orientierung des Endeffektes mögliche Stellung der Gelenke zu berechnen (meist mehrere Lösungen)
@@ -20,6 +22,8 @@ fellmann zitieren
 - numerische Berechnung: lineare Annäherung durch Jacobi-Matrix
 
 fellmann zitieren
+
+\autocite{fellmann2007}
 
 \subsection{Laufplanung}
 
