--- a/tex/kapitel/kapitel_1_einleitung.tex
+++ b/tex/kapitel/kapitel_1_einleitung.tex
@@ -11,7 +11,7 @@ Diese Arbeit nutzt ein bestehendes planendes Verfahren und portiert dieses auf e
 
 \section{Ziel der Arbeit}
 
-André Herms \autocite{herms2004} hat initial verschiedene Algorithmen zur Laufplanung analysiert und eine Auswahl in einer bestehenden OpenInventor-Umgebung \autocite{inventor} für den sechsbeinigen Laufroboter \emph{LAURON} aufgesetzt. Dabei hat sich aus einer Auswahl von sieben Algorithmen und den Auswahlkriterien Anytime-Fähigkeit, Parallelisierbarkeit, Speicherbedarf und Anwendbarkeit das Random Sampling als beste Wahl herausgestellt. Uli Ruffler \autocite{ruffler2006} hat diesen Algorithmus auf eine inkrementelle Funktionsweise weiterentwickelt sowie weitere Anpassungen vorgenommen.
+André Herms \autocite{herms2004} hat initial verschiedene Algorithmen zur Laufplanung analysiert und eine Auswahl in einer bestehenden OpenInventor-Umgebung \autocite{inventor} für den sechsbeinigen Laufroboter \emph{Lauron III} aufgesetzt. Dabei hat sich aus einer Auswahl von sieben Algorithmen und den Auswahlkriterien Anytime-Fähigkeit, Parallelisierbarkeit, Speicherbedarf und Anwendbarkeit das Random Sampling als beste Wahl herausgestellt. Uli Ruffler \autocite{ruffler2006} hat diesen Algorithmus auf eine inkrementelle Funktionsweise weiterentwickelt sowie weitere Anpassungen vorgenommen.
 
 Das Ziel dieser Arbeit ist nun diesen Laufplaner für den \emph{Akrobat} bereitzustellen. Da dieser Laufroboter auf \ac{ROS} aufgesetzt ist, muss die OpenInventor-Umgebung migriert werden. Da es sich um ein anderes Robotermodell handelt, müssen auch weitere Anpassungen vorgenommen werden.
 
