--- a/tex/kapitel/kapitel_4_implementierung.tex
+++ b/tex/kapitel/kapitel_4_implementierung.tex
@@ -5,7 +5,7 @@ Dieses Kapitel geht auf die Einzelheiten und die Abläufe der Portierung des Lau
 
 \section{Analyse bestehender Laufplaner}
 
-Der von André Herms \autocite{herms2004} und von Uli Ruffler \autocite{ruffler2006} weiterentwickelte Laufplaner für den \emph{LAURON} basiert auf der 3D-Bibliothek OpenInventor \autocite{inventor}. Dieses ToolKit basiert wiederum auf OpenGL und ist in C++ implementiert. Des Weiteren ist es objektorientiert und daher orientiert sich auch der Laufplaner an diesem Programmierstil. Auf Grund dieser Tatsache existieren Klassen bzw. Objekte, die nun beschrieben werden:
+Der von André Herms \autocite{herms2004} und von Uli Ruffler \autocite{ruffler2006} weiterentwickelte Laufplaner für den \emph{Lauron} basiert auf der 3D-Bibliothek OpenInventor \autocite{inventor}. Dieses ToolKit basiert wiederum auf OpenGL und ist in C++ implementiert. Des Weiteren ist es objektorientiert und daher orientiert sich auch der Laufplaner an diesem Programmierstil. Auf Grund dieser Tatsache existieren Klassen bzw. Objekte, die nun beschrieben werden:
 \begin{itemize}
   \item \emph{World}: speichert die Objekte der Sicht auf die Landschaft und den Roboter. 
   \item \emph{Terrain}: enthält die Informationen über die Höhenkarte.
