--- a/tex/preambel.tex
+++ b/tex/preambel.tex
@@ -244,3 +244,6 @@
     keywordstyle=\color{blue}, % keyword color
     stringstyle=\color{red} % string color
 }
+
+\usepackage{siunitx}
+\sisetup{per-mode=fraction}
